--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ asgiref==3.5.0
 asttokens==2.0.5
 backcall==0.2.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
+cryptography==36.0.2
 decorator==5.1.1
+defusedxml==0.7.1
 Django==3.2
+django-allauth==0.49.0
 django-filter==21.1
 djangorestframework==3.13.1
 djangorestframework-jwt==1.11.0
@@ -19,16 +23,20 @@ ipython==8.1.1
 jedi==0.18.1
 Markdown==3.3.6
 matplotlib-inline==0.1.3
+oauthlib==3.2.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.28
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.21
 Pygments==2.11.2
 PyJWT==1.7.1
+python3-openid==3.2.0
 pytz==2021.3
 requests==2.27.1
+requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.2
 stack-data==0.2.0
